# curryparty

./: .gitignore  README.md  bench.py  lambda.py  mise.toml  pyproject.toml
.github/workflows/: publish.yml
__marimo__/session/: lambda.py.json
src/curryparty/: __init__.py  core.py  display.py  term.py  utils.py
src/lambda_calc_py/: __init__.py  core.py  dataframe.py  display.py  utils.py
