[project]
name = "curryparty"
version = "0.1.0"
description = "Python playground to learn lambda calculus"
readme = "README.md"
authors = [
    { name = "Antonin P", email = "antonin.peronnet@telecom-paris.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.36.1",
    "svg-py>=1.9.2",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "marimo>=0.18.4",
    "ruff>=0.14.8",
]
